# dualboot-python-course

./: .gitignore  Dockerfile  README.md  docker-compose.ci.yml  docker-compose.yml  newrelic.ini  pyproject.toml
.github/workflows/: main.yml
SQL/: create_employees_and_departments.sql  create_locations.sql  create_regions.sql  select_count_employes_by_region.sql  select_employees_last_30_days_hiring.sql  select_employees_with_hight_salary.sql  select_employees_with_long_last_name.sql  select_employees_with_not_valid_email.sql  select_max_and_min_salary_by_department.sql
scripts/: bash-session.sh
sokets/: client.py  server.py
task_manager/: celery.py  log_utils.py  settings.py  tasks.py  urls.py
task_manager/main/: admin.py  permissions.py  serializers.py  validators.py  views.py
task_manager/main/migrations/: 0001_initial.py  0002_tag_task.py  0003_user_role.py  0004_alter_task_date_update.py  0005_alter_task_assigned_alter_task_author.py  0006_user_date_of_birth_user_phone.py  0007_user_avatar_picture.py
task_manager/main/models/: tag.py  task.py  user.py
task_manager/services/: mail.py  single_resource.py
test/: base.py  test_admin.py  test_current_user.py  test_jwt_auth.py  test_send_email.py  test_tag.py  test_task.py  test_task_tags.py  test_user.py  test_user_tasks.py  user_factory.py
test/factories/: action_client.py  base.py  tag_factory.py  task_factory.py  user_factory.py
test/test_views/: test_countdown.py  test_current_user.py  test_send_email.py  test_tag.py  test_task.py  test_task_tags.py  test_user.py  test_user_tasks.py
(+2 files in other folders)
